--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                             </div>
                         {% else %}
                             <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                            <a style="color:white" class="fr loginbtn" href="/login/">登录</a>
+                            <a style="color:white" class="fr loginbtn" href="/users/login/">登录</a>
                         {% endif %}
 				</div>
 			</div>
