--- a/templates/register.html
+++ b/templates/register.html
@@ -133,7 +133,7 @@
                     <!--</form>-->
                 <!--</div>-->
                 <div class="tab-form">
-                    <form id="email_register_form" method="post" action="register.html" autocomplete="off">
+                    <form id="email_register_form" method="post" action="{% url 'register' %}" autocomplete="off">
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
                         <div class="form-group marb20 ">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
@@ -145,13 +145,14 @@
                         </div>
                         <div class="form-group marb8 captcha1 ">
                             <label>验&nbsp;证&nbsp;码</label>
-                            <img src="/captcha/image/2f3f82e5f7a054bf5caa93b9b0bb6cc308fb7011/" alt="captcha" class="captcha" /> <input id="id_captcha_0" name="captcha_0" type="hidden" value="2f3f82e5f7a054bf5caa93b9b0bb6cc308fb7011" /> <input autocomplete="off" id="id_captcha_1" name="captcha_1" type="text" />
+                            {{ register_form.captcha }}
                         </div>
                         <div class="error btns" id="jsEmailTips"></div>
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
                     <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
+                        {% csrf_token %}
                     </form>
                 </div>
                 <p class="form-p">已有账号？<a href="{% url 'login' %}">[立即登录]</a></p>
