--- a/templates/register.html
+++ b/templates/register.html
@@ -137,7 +137,6 @@
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
                         <div class="form-group marb20 {% if register_form.errors.email %}errorput{% endif %}">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
-{#                            {{ register_form2.email }}#}
                             <input  type="text" id="id_email" name="email" value="{% if register_form.email.value %}{{ register_form.email.value }}{% endif %}" placeholder="请输入您的邮箱地址" />
                         </div>
                         <div class="error btns" id="jsEmailTips">
@@ -147,7 +146,6 @@
                         <div class="form-group marb8 {% if register_form.errors.password %}errorput{% endif %}">
                             <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
                             <input type="password" id="id_password" name="password"  value="{% if register_form.password.value %}{{ register_form.password.value }}{% endif %}" placeholder="请输入6-20位非中文字符密码" />
-{#                            {{ register_form2.password }}#}
                         </div>
                         <div class="error btns" id="jsEmailTips">
                             {% for error in register_form.password.errors %} {{ error }} {% endfor %}
@@ -155,16 +153,20 @@
 
                         <div class="form-group marb8 captcha1 {% if register_form.errors.captcha %}errorput{% endif %}">
                             <label>验&nbsp;证&nbsp;码</label>
-                            {{ register_form2.captcha }}
+                            {{ register_form.captcha }}
                         </div>
                         <div class="error btns" id="jsEmailTips">
                             {% for error in register_form.captcha.errors %}{{ error }} {% endfor %}
                         </div>
 
+                        <div class="error btns" id="jsEmailTips">
+                            {{ msg }}
+                        </div>
+
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
-                    <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
+                        <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
                         {% csrf_token %}
                     </form>
                 </div>
