--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -21,14 +21,24 @@
                     <input type="password" name="password1" id="pwd" placeholder="6-20位非中文字符">
                     <i></i>
                 </li>
+                <div class="error btns" id="jsForgetTips">
+                        {% for error in reset_form.password1.errors %}{{ error }} {% endfor %}
+                </div>
+
                 <input type="hidden" name="email" value="{{ email }}">
                 <li>
                     <span class="">确定密码：</span>
                     <input type="password" name="password2" id="repwd" placeholder="6-20位非中文字符">
                     <i></i>
                 </li>
+                <div class="error btns" id="jsForgetTips">
+                        {% for error in reset_form.password2.errors %}{{ error }} {% endfor %}
+                </div>
+                <div class="error btns" id="jsForgetTips">
+                        {{ msg }}
+                </div>
                 <li class="button">
-                    <input type="button" value="提交" onclick="reset_password_form_submit()">
+                    <input type="submit" value="提交">
                 </li>
             </ul>
             {% csrf_token %}
