--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -52,7 +52,7 @@
             <div class="hd-login clearfix">
                 <a class="index-logo" href="index.html"></a>
                 <h1>用户登录</h1>
-                <a class="index-font" href="index.html">回到首页</a>
+                <a class="index-font" href="{% url 'index' %}">回到首页</a>
             </div>
             <div class="fl slide">
                 <div class="imgslide">
@@ -82,6 +82,7 @@
                         <a class="fr" href="{% url 'forget' %}">忘记密码？</a>
                      </div>
                      <input class="btn btn-green" id="jsLoginBtn" type="submit" value="立即登录 > " />
+                     <input type="hidden" name="next" value="/users/coco/">
                     {% csrf_token %}
                 </form>
                 <p class="form-p">没有慕学在线网帐号？<a href="register.html">[立即注册]</a></p>
