--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -68,7 +68,7 @@
             <div class="fl form-box">
                 <h2>帐号登录</h2>
                 <form action="/users/login/" method="post" autocomplete="off">
-                    <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
+                    <div class="form-group marb20 {% if form.errors.username %}errorput{% endif %}">
                         <label>用&nbsp;户&nbsp;名</label>
                         <input name="username" id="account_l" type="text" placeholder="手机号/邮箱" />
                     </div>
@@ -76,7 +76,7 @@
                         <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
                         <input name="password" id="password_l" type="password" placeholder="请输入您的密码" />
                     </div>
-                    <div class="error btns login-form-tips" id="jsLoginTips">{% for k, error in login_form.errors.items %}{{ error }} {% endfor %}{{ msg }}</div>
+                    <div class="error btns login-form-tips" id="jsLoginTips">{% for k, error in form.errors.items %}{{ error }} {% endfor %}{{ msg }}</div>
                      <div class="auto-box marb38">
 
                         <a class="fr" href="{% url 'forget' %}">忘记密码？</a>
