--- a/templates/org/org_list.html
+++ b/templates/org/org_list.html
@@ -23,13 +23,13 @@
 				<li>
 					<h2>机构类别</h2>
 					<div class="cont">
-                        <a href="?city="><span class="active2">全部</span></a>
+                        <a href="?city={{ city_id }}"><span class="{% ifequal category '' %}active2{% endifequal %}">全部</span></a>
 
-                            <a href="?ct=pxjg&city="><span class="">培训机构</span></a>
+                            <a href="?ct=train&city={{ city_id }}"><span class="{% ifequal category 'train' %}active2{% endifequal %}">培训机构</span></a>
 
-                            <a href="?ct=gx&city="><span class="">高校</span></a>
+                            <a href="?ct=college&city={{ city_id }}"><span class="{% ifequal category 'college' %}active2{% endifequal %}">高校</span></a>
 
-                            <a href="?ct=gr&city="><span class="">个人</span></a>
+                            <a href="?ct=personal&city={{ city_id }}"><span class="{% ifequal category 'personal' %}active2{% endifequal %}">个人</span></a>
 
 					</div>
 				</li>
@@ -37,9 +37,9 @@
 					<h2>所在地区</h2>
 					<div class="more">更多</div>
 					<div class="cont">
-                        <a href="?ct="><span class="active2">全部</span></a>
+                        <a href="?ct={{ category }}"><span class="{% ifequal city_id '' %}active2{% endifequal %}">全部</span></a>
                         {% for city in citites %}
-                            <a href="?city=1&ct="><span class="">{{ city }}</span></a>
+                            <a href="?city={{ city.id }}&ct={{ category }}"><span class="{% ifequal city_id city.id|stringformat:"i" %}active2{% endifequal %}">{{ city }}</span></a>
                         {% endfor %}
 
 					</div>
@@ -51,13 +51,13 @@
 		<div class="layout">
 			<div class="head">
 				<ul class="tab_header">
-					<li class="active"><a href="?ct=&city=">全部</a> </li>
-					<li class=""><a href="?sort=students&ct=&city=">学习人数 &#8595;</a></li>
-					<li class=""><a href="?sort=courses&ct=&city=">课程数 &#8595;</a></li>
+					<li class="{% ifequal sort '' %}active{% endifequal %}"><a href="?ct={{ category }}&city={{ city_id }}">全部</a> </li>
+					<li class="{% ifequal sort "students" %}active{% endifequal %}"><a href="?sort=students&ct={{ category }}&city={{ city_id }}">学习人数 &#8595;</a></li>
+					<li class="{% ifequal sort "courses" %}active{% endifequal %}"><a href="?sort=courses&ct={{ category }}&city={{ city_id }}">课程数 &#8595;</a></li>
 				</ul>
 			</div>
 
-            {% for org in orgs %}
+            {% for org in orgs.object_list %}
                 <dl class="des difdes">
                     <dt>
                         <a href="org-detail-homepage.html">
@@ -67,7 +67,7 @@
                     <dd>
                         <div class="clearfix">
                              <a href="org-detail-homepage.html">
-                                 <h1>慕课网</h1>
+                                 <h1>{{ org.name }}</h1>
                                  <div class="pic fl">
 
                                          <img src="{% static 'images/authentication.png' %}"/>
@@ -96,31 +96,23 @@
 		</div>
 		 <div class="pageturn">
             <ul class="pagelist">
-
-
-
-
-
-                            <li class="active"><a href="?page=1">1</a></li>
-
-
-
-
-
-                            <li><a href="?page=2" class="page">2</a></li>
-
-
-
-
-
-                            <li><a href="?page=3" class="page">3</a></li>
-
-
-
-
-                    <li class="long"><a href="?page=2">下一页</a></li>
-
-
+                {% if orgs.has_previous %}
+                    <li class="long"><a href="?{{ orgs.previous_page_number.querystring }}">上一页</a></li>
+                {% endif %}
+                {% for page in orgs.pages %}
+                    {% if page %}
+                        {% ifequal page orgs.number %}
+                            <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                        {% else %}
+                            <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                        {% endifequal %}
+                     {% else %}
+                         <li class="none"><a href="">...</a></li>
+                     {% endif %}
+                {% endfor %}
+                {% if orgs.has_next %}
+                    <li class="long"><a href="?{{ orgs.previous_page_number.querystring }}">下一页</a></li>
+                {% endif %}
             </ul>
         </div>
 		</div>
@@ -148,36 +140,16 @@
 
 		<div class="right companyrank layout">
 			<div class="head">授课机构排名</div>
-
-
-                <dl class="des">
-                    <dt class="num fl">1</dt>
+                {% for org in hot_orgs %}
+                   <dl class="des">
+                    <dt class="num fl">{{ forloop.counter }}</dt>
                     <dd>
-                        <a href="/company/2/"><h1>慕课网</h1></a>
-                        <p>北京市</p>
+                        <a href="/company/2/"><h1>{{ org.name }}</h1></a>
+                        <p>{{ org.address }}</p>
                     </dd>
                 </dl>
-
-                <dl class="des">
-                    <dt class="num fl">2</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>慕课网2</h1></a>
-                        <p>深圳市</p>
-                    </dd>
-                </dl>
-
-                <dl class="des">
-                    <dt class="num fl">3</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>北京大学</h1></a>
-                        <p>北京市</p>
-                    </dd>
-                </dl>
-
-
-
-
-		</div>
+                {% endfor %}
+		    </div>
         </div>
 </section>
 {% endblock content %}
