--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+{% load staticfiles %}
 
 <head>
 	<meta charset="UTF-8">
@@ -86,7 +87,7 @@
 							<li >
 								<a href="teachers-list.html">授课教师</a>
 							</li>
-							<li ><a href="org-list.html">授课机构</a></li>
+							<li ><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
 					</div>
 				</div>
