--- a/templates/org/org_base.html
+++ b/templates/org/org_base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+{% load common_tags %}
 {% load staticfiles %}
+
 <html>
 
 <head>
@@ -35,10 +37,10 @@
 
             <div class="middle companyheader">
                 <div class="wp">
-                    <img class="fl" style="width: 112px;height: 103px" src="{{ MEDIA_URL }}org/2016/11/imooc.png"/>
+                    <img class="fl" style="width: 112px;height: 103px" src="{{ MEDIA_URL }}{{ course_org.image }}"/>
                     <div class="head fl">
                         <h1>
-                            慕课网
+                            {{ course_org.name }}
                             <img src="{% static 'images/authentication.png' %}"/>
                             <img src="{% static 'images/gold.png' %}"/>
                         </h1>
@@ -70,10 +72,10 @@
 
 <section>
 	<div class="wp list personal_list comp">
-		<div class="left">
+		<div class="left">{{ request.path }}
 			<ul>
-				<li class="active2"><a href="org-detail-homepage.html">机构首页</a></li>
-                <li class=""><a href="org-detail-course.html">机构课程</a></li>
+				<li class="active2"><a href="{% url 'org:home' course_org.id %}">机构首页</a></li>
+                <li class=""><a href="{% url 'org:course' course_org.id %}">机构课程</a></li>
                 <li class=""><a href="org-detail-desc.html">机构介绍</a></li>
                 <li class=""><a href="org-detail-teachers.html">机构讲师</a></li>
 			</ul>
@@ -140,7 +142,7 @@ $(function(){
         score = $precision.attr('data-star-scope'),
         option =  {
                     half		: true,
-                    path		: '../images/',
+                    path		: '{% static 'images/' %}',
                     precision	: true,
                     size		: 24,
                     starOff		: 'g_star.png',
