--- a/templates/org/org-detail-course.html
+++ b/templates/org/org-detail-course.html
@@ -1,6 +1,7 @@
 {% extends 'org/org_base.html' %}
 
 {% block title %}机构课程列表页{% endblock title %}
+{% block page_path %}机构课程{% endblock page_path %}
 
 {% block right_form %}
     <div class="right companycenter layout" >
@@ -31,8 +32,9 @@
         {% endfor %}
     </div>
     <div class="pageturn">
-                <ul class="pagelist">
-                    <li class="active"><a href="?page=1">1</a></li>
-                </ul>
-            </div>
+        <ul class="pagelist">
+            <li class="active"><a href="?page=1">1</a></li>
+        </ul>
+    </div>
+    </div>
 {% endblock right_form %}
