--- a/templates/org/org-detail-homepage.html
+++ b/templates/org/org-detail-homepage.html
@@ -1,7 +1,7 @@
 {% extends 'org/org_base.html' %}
 
 {% block title %}机构首页{% endblock title %}
-
+{% block page_path %}机构首页{% endblock page_path %}
 {% block right_form %}
     <div class="right companycenter layout grouping" >
             <div class="head">
