--- a/templates/org/org_base.html
+++ b/templates/org/org_base.html
@@ -64,7 +64,7 @@
 	<div class="wp">
 		<ul  class="crumbs">
             <li><a href="index.html">首页</a>></li>
-			<li><a href="org-list.html">课程机构</a>></li>
+			<li><a href="{% url 'org:org_list' %}">课程机构</a>></li>
 			<li>{% block page_path %}机构首页{% endblock page_path %}</li>
 		</ul>
 	</div>
@@ -76,8 +76,8 @@
 			<ul>
 				<li class="{% is_active_reverse request course_org.id 'org:home' %}"><a href="{% url 'org:home' course_org.id %}">机构首页</a></li>
                 <li class="{% is_active_reverse request course_org.id 'org:course' %}"><a href="{% url 'org:course' course_org.id %}">机构课程</a></li>
-                <li class=""><a href="org-detail-desc.html">机构介绍</a></li>
-                <li class=""><a href="org-detail-teachers.html">机构讲师</a></li>
+                <li class="{% is_active_reverse request course_org.id 'org:desc' %}"><a href="{% url 'org:desc' course_org.id %}">机构介绍</a></li>
+                <li class="{% is_active_reverse request course_org.id 'org:desc' %}"><a href="{% url 'org:teacher' course_org.id %}">机构讲师</a></li>
 			</ul>
 		</div>
 
