# add fav part1

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -19,9 +19,6 @@
 <section class="headerwrap ">
     <header>
 		<div  class=" header">
-            {% if request.user.is_authenticated %}
-
-            {% endif %}
  			<div class="top">
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
@@ -29,12 +26,12 @@
                         {% if request.user.is_authenticated %}
                             <div class="personal">
                                 <dl class="user fr">
-                                    <dd>bobby<img class="down fr" src="/static/images/top_down.png"/></dd>
-                                    <dt><img width="20" height="20" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                    <dd>bobby<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                    <dt><img width="20" height="20" src="{{ MEDIA_URL }}image/2016/12/default_big_14.png"/></dt>
                                 </dl>
                                 <div class="userdetail">
                                     <dl>
-                                        <dt><img width="80" height="80" src="/media/image/2016/12/default_big_14.png"/></dt>
+                                        <dt><img width="80" height="80" src="{{ MEDIA_URL }}image/2016/12/default_big_14.png"/></dt>
                                         <dd>
                                             <h2>django</h2>
                                             <p>bobby</p>
@@ -577,8 +574,7 @@
 <script src="/static/js/unslider.js" type="text/javascript"></script>
 <script src="/static/js/plugins/jquery.scrollLoading.js" type="text/javascript"></script>
 <script src="/static/js/deco-common.js" type="text/javascript"></script>
-
-    <script type="text/javascript" src="/static/js/index.js"></script>
+<script type="text/javascript" src="/static/js/index.js"></script>
 
 </body>
 </html>
