# 调整base.html 优化template结构

--- a/templates/courses/course-list.html
+++ b/templates/courses/course-list.html
@@ -1,4 +1,4 @@
-{% extends 'org/base.html' %}
+{% extends 'base.html' %}
 {% load  staticfiles %}
 {% block title %}公开课列表 - 慕学在线网{% endblock title %}
 
