--- a/templates/org/org_base.html
+++ b/templates/org/org_base.html
@@ -96,7 +96,7 @@
 				<li class="{% is_active_reverse request course_org.id 'org:home' %}"><a href="{% url 'org:home' course_org.id %}">机构首页</a></li>
                 <li class="{% is_active_reverse request course_org.id 'org:course' %}"><a href="{% url 'org:course' course_org.id %}">机构课程</a></li>
                 <li class="{% is_active_reverse request course_org.id 'org:desc' %}"><a href="{% url 'org:desc' course_org.id %}">机构介绍</a></li>
-                <li class="{% is_active_reverse request course_org.id 'org:desc' %}"><a href="{% url 'org:teacher' course_org.id %}">机构讲师</a></li>
+                <li class="{% is_active_reverse request course_org.id 'org:teacher' %}"><a href="{% url 'org:teacher' course_org.id %}">机构讲师</a></li>
 			</ul>
 		</div>
 
