--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4085,7 +4085,7 @@ footer .footer .line {
     border: 0;
 }
 
-.personal_list .left li:hover, .personal_list .left .active2 {
+.personal_list .left li:hover, .personal_list .left li.active2 {
     background: #fff url(../images/arrow_g.png) no-repeat 95% center;
     border-left: 2px solid #717171;
 }
