--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+{% load common_tags %}
 {% load  staticfiles %}
 
 <head>
@@ -24,13 +25,8 @@
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
 					<!--登录后跳转-->
-
-
                         <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
-
-
-
 				</div>
 			</div>
 
@@ -54,13 +50,14 @@
                 </div>
             </div>
 
-
 			<nav>
 				<div class="nav">
 					<div class="wp">
 						<ul>
-							<li ><a href="{% url 'index' %}">首页</a></li>
-							<li >
+							<li class="{% is_active_reverse request '' 'index' %}">
+                                <a href="{% url 'index' %}">首页</a>
+                            </li>
+							<li class="{% is_active_reverse request '' 'course:course_list' %}">
 								<a href="{% url 'course:course_list' %}">
 									公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
 								</a>
@@ -68,7 +65,7 @@
 							<li >
 								<a href="teachers-list.html">授课教师</a>
 							</li>
-							<li class="active" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
+							<li class="{% is_active_reverse request '' 'org:org_list' %}" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
 						</ul>
 					</div>
 				</div>
