--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,6 @@
     {% block custom_css %}{% endblock custom_css %}
     <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}" type="text/javascript"></script>
-    {% block custom_script %}{% endblock custom_script %}
 
 </head>
 <body>
@@ -28,7 +27,7 @@
                         {% if request.user.is_authenticated %}
                             <div class="personal">
                                 <dl class="user fr">
-                                    <dd>bobby<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                    <dd>{{ request.user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
                                     <dt><img width="20" height="20" src="{{ MEDIA_URL }}image/2016/12/default_big_14.png"/></dt>
                                 </dl>
                                 <div class="userdetail">
@@ -36,7 +35,7 @@
                                         <dt><img width="80" height="80" src="{{ MEDIA_URL }}image/2016/12/default_big_14.png"/></dt>
                                         <dd>
                                             <h2>django</h2>
-                                            <p>bobby</p>
+                                            <p>{{ request.user.username }}</p>
                                         </dd>
                                     </dl>
                                     <div class="btn">
@@ -144,6 +143,6 @@
 <script src="{% static 'js/unslider.js' %}"></script>
 <script src="{% static 'js/plugins/jquery.scrollLoading.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/deco-common.js' %}" type="text/javascript"></script>
-
+{% block custom_script %}{% endblock custom_script %}
 </body>
 </html>
